kubernetes/services/prowlarr.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 9696
  selector:
    app: prowlarr

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`prowlarr.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
  tls:
    secretName: wilcard-main-domain-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: default
  labels:
    app: prowlarr
  annotations:
    reloader.stakater.com/auto: "true"
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: app
          image: lscr.io/linuxserver/prowlarr:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.25"
            limits:
              memory: "1024Mi"
              cpu: "1.00"
          ports:
            - name: web
              containerPort: 9696
          volumeMounts:
            - name: scripts
              mountPath: /custom-cont-init.d/create-prowlarr-config.sh
              subPath: create-prowlarr-config.sh
      volumes:
        - name: scripts
          configMap:
            name: prowlarr-scripts
            defaultMode: 0744
